--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
         <a class="logo" href="./index.html">
           Web<span class="logo-decore">Studio</span>
         </a>
-        <nav class="nav">
+        <button class="burger" type="button" aria-expanded="false" aria-controls="nav" data-menu-button>
+          <svg class="burger__symbol" width="40" height="40" aria-label="кнопка переключателя моюильного  меню">
+            <use class="burger__icon-burger" href="./symbol-defs.svg#burger"></use>
+            <use class="burger__icon-croos" href="./symbol-defs.svg#croos"></use>
+          </svg>
+        </button>
+        <nav class="nav" data-menu>
           <ul class="nav__list">
             <li class="nav__items"><a class="link link--active" href="./index.html">Студия</a></li>
             <li class="nav__items"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav__items"><a class="link" href="#footer">Контакты</a></li>
+            <li class="nav__items nav__number"><a class="link" href="#footer">Контакты</a></li>
           </ul>
-        </nav>
         <ul class="nav__list">
           <li class="nav__items"><a class="link link__cont" href="mailto:info@devstudio.com">
             <svg class="link__cont--symbol" width="16" height="12">
@@ -90,13 +95,14 @@
               </use>
             </svg>
             info@devstudio.com</a></li>
-          <li class="nav__items"><a class="link link__cont" href="tel:+380961111111">
+          <li class="nav__items nav__number"><a class="link link__cont" href="tel:+380961111111">
             <svg class="link__cont--symbol"  width="11" height="16">
               <use href="./symbol-defs.svg#icon-smartphone">
               </use>
             </svg>
             +38 096 111 11 11</a></li>
         </ul>
+        </nav>
       </div>
     </header>
     <main>
@@ -382,6 +388,7 @@
         </form>
       </div>
     </footer>
+    <script src="./JS/burger.js"></script>
     <script src="./JS/modal.js"></script>
   </body>
 </html>
