--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
         </button>
         <nav class="nav" data-menu>
           <ul class="nav__list">
-            <li class="nav__items"><a class="link link--active" href="./index.html">Студия</a></li>
-            <li class="nav__items"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav__items nav__number"><a class="link" href="#footer">Контакты</a></li>
+            <li class="nav__items"><a class="nav__link nav__link--active" href="./index.html">Студия</a></li>
+            <li class="nav__items"><a class="nav__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav__items "><a class="nav__link" href="#footer">Контакты</a></li>
           </ul>
-        <ul class="nav__list">
-          <li class="nav__items"><a class="link link__cont" href="mailto:info@devstudio.com">
-            <svg class="link__cont--symbol" width="16" height="12">
+        <ul class="contacts">
+          <li class="contacts__items"><a class="contacts__link" href="mailto:info@devstudio.com">
+            <svg class="contacts__symbol" width="16" height="12">
               <use href="./symbol-defs.svg#icon-envelope">
               </use>
             </svg>
             info@devstudio.com</a></li>
-          <li class="nav__items nav__number"><a class="link link__cont" href="tel:+380961111111">
-            <svg class="link__cont--symbol"  width="11" height="16">
+          <li class="contacts__items"><a class="contacts__link" href="tel:+380961111111">
+            <svg class="contacts__symbol" width="11" height="16">
               <use href="./symbol-defs.svg#icon-smartphone">
               </use>
             </svg>
