hero backgroud adaptiv image

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <button class="burger" type="button" aria-expanded="false" aria-controls="nav" data-menu-button>
           <svg class="burger__symbol" width="40" height="40" aria-label="кнопка переключателя моюильного  меню">
             <use class="burger__icon-burger" href="./symbol-defs.svg#burger"></use>
-            <use class="burger__icon-croos" href="./symbol-defs.svg#croos"></use>
+            <use class="burger__icon-cross" href="./symbol-defs.svg#cross"></use>
           </svg>
         </button>
         <nav class="nav" data-menu>
