--- a/portfolio.html
+++ b/portfolio.html
@@ -15,27 +15,33 @@
         <a class="logo" href="./index.html">
             Web<span class="logo-decore">Studio</span>
         </a>
-        <nav class="nav">
+        <button class="burger" type="button" aria-expanded="false" aria-controls="nav" data-menu-button>
+            <svg class="burger__symbol" width="40" height="40" aria-label="кнопка переключателя моюильного  меню">
+                <use class="burger__icon-burger" href="./symbol-defs.svg#burger"></use>
+                <use class="burger__icon-cross" href="./symbol-defs.svg#cross"></use>
+            </svg>
+        </button>
+        <nav class="nav" data-menu>
             <ul class="nav__list">
-                <li class="nav__items"><a class="link" href="./index.html">Студия</a></li>
-                <li class="nav__items"><a class="link link--active" href="./portfolio.html">Портфолио</a></li>
-                <li class="nav__items"><a class="link" href="#footer">Контакты</a></li>
+                <li class="nav__items"><a class="nav__link" href="./index.html">Студия</a></li>
+                <li class="nav__items"><a class="nav__link nav__link--active" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav__items "><a class="nav__link" href="#footer">Контакты</a></li>
+            </ul>
+            <ul class="contacts">
+                <li class="contacts__items"><a class="contacts__link" href="mailto:info@devstudio.com">
+                        <svg class="contacts__symbol" width="16" height="12">
+                            <use href="./symbol-defs.svg#icon-envelope">
+                            </use>
+                        </svg>
+                        info@devstudio.com</a></li>
+                <li class="contacts__items"><a class="contacts__link" href="tel:+380961111111">
+                        <svg class="contacts__symbol" width="11" height="16">
+                            <use href="./symbol-defs.svg#icon-smartphone">
+                            </use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
             </ul>
         </nav>
-        <ul class="nav__list">
-            <li class="nav__items"><a class="link link__cont" href="mailto:info@devstudio.com">
-                    <svg class="link__cont--symbol" width="16" height="12">
-                        <use href="./symbol-defs.svg#icon-envelope">
-                        </use>
-                    </svg>
-                    info@devstudio.com</a></li>
-            <li class="nav__items"><a class="link link__cont" href="tel:+380961111111">
-                    <svg class="link__cont--symbol" width="11" height="16">
-                        <use href="./symbol-defs.svg#icon-smartphone">
-                        </use>
-                    </svg>
-                    +38 096 111 11 11</a></li>
-        </ul>
     </div>
 </header>
 <main>
@@ -235,6 +241,7 @@
         </form>
     </div>
 </footer>
+<script src="../JS/burger.js"></script>
     </body>
     
     </html>
