hero is hidden on click burger button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </header>
     <main>
     <!--========================section hero================================-->   
-    <section class="hero">
+    <section class="hero" data-hero>
       <div class="hero-container">
         <h1 class="hero-container__title">Эффективные решения <span class="hero-container__title--decor">для вашего бизнеса</span>
         </h1>
