--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@
           </p>
         </li>
       </ul>
-      <h3 class="other-title">Чем мы занимаемся</h3>
-      <ul class="business__list">
-        <li class="business__image-box">
+      <h3 class="title__image-box">Чем мы занимаемся</h3>
+      <ul class="business__image-box">
+        <li class="business__image-box--item">
           <img src="./images/squoosh/business.jpg" alt="noot1" width="370" />
           <p class="business__image-box--text">Десктопные приложения</p>
         </li>
-        <li class="business__image-box">
+        <li class="business__image-box--item">
           <img src="./images/squoosh/mobile_app.jpg" alt="noot" width="370" />
         <p class="business__image-box--text">Мобильные приложения</p>
       </li>
-        <li class="business__image-box">
+        <li class="business__image-box--item">
           <img src="./images/squoosh/borders.jpg" alt="noot2" width="370" />
           <p class="business__image-box--text">Дизайнерские решения</p>
         </li>
@@ -193,7 +193,7 @@
       <h2 class="other-title">Наша команда</h2>
       <ul class="team-container__list">
         <li class="team-container__item">
-          <img class="team-container__image" src="./images/squoosh/nikolay.jpg" alt="Nikolay" width="270" />
+          <img class="team-container__image" src="./images/squoosh/nikolay.jpg" alt="Nikolay" width="450" />
           <h3 class="team-container__title">Николай Кучеренко</h3>
           <p class="team-container__text">Product Designer</p>
           <ul class="symbol-list">
@@ -217,7 +217,7 @@
           </ul>
         </li>
         <li class="team-container__item">
-          <img class="team-container__image" src="./images/squoosh/olga.jpg" alt="Olga" width="270" />
+          <img class="team-container__image" src="./images/squoosh/olga.jpg" alt="Olga" width="450" />
           <h3 class="team-container__title">Ольга Иванова</h3>
           <p class="team-container__text">Frontend Developer</p>
               <ul class="symbol-list">
@@ -244,7 +244,7 @@
               </ul>
         </li>
         <li class="team-container__item">
-          <img class="team-container__image" src="./images/squoosh/andry.jpg" alt="Andry" width="270" />
+          <img class="team-container__image" src="./images/squoosh/andry.jpg" alt="Andry" width="450" />
           <h3 class="team-container__title">Андрей Шевченко</h3>
           <p class="team-container__text">Marketing</p>
               <ul class="symbol-list">
@@ -271,7 +271,7 @@
               </ul>
         </li>
         <li class="team-container__item">
-          <img class="team-container__image" src="./images/squoosh/ivan.jpg" alt="Ivan" width="270" />
+          <img class="team-container__image" src="./images/squoosh/ivan.jpg" alt="Ivan" width="450" />
           <h3 class="team-container__title">Иван Николаев</h3>
           <p class="team-container__text">UI Designer</p>
               <ul class="symbol-list">
