--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,12 @@
     <li class="portfolio-list__item">
     <a  class="portfolio-list__link" href="">
     <div class="hidden-box">
-    <img src="./images/squoosh/tehnocrack.jpg" width="370" height="295" alt="технокряк">
+    <picture>
+        <source srcset="./images/squoosh/tehnocrack_mobile.jpg 1x,
+                        ./images/squoosh/tehnocrack_mobile@2x.jpg 2x,
+                        ./images/squoosh/tehnocrack_mobile@3x.jpg 3x" media="(max-width:767px)">
+    <img src="./images/squoosh/tehnocrack.jpg" width="450" height="294" alt="технокряк">
+    </picture>
         <p class="hidden-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quia molestias, consequuntur, dolore accusantium
                     cumque impedit maxime iusto quidem officia nulla perspiciatis! Quos eum nihil consequatur labore! Dolor, soluta
                     maxime!</p>
@@ -79,7 +84,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/neworlean.jpg" width="370" height="295" alt=" баскетболисты">
+                <img src="./images/squoosh/neworlean.jpg" width="450" alt=" баскетболисты">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -93,7 +98,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/seafood.jpg" width="370" height="295" alt="морепродукты">
+                <img src="./images/squoosh/seafood.jpg" width="450" alt="морепродукты">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -107,7 +112,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/projectprime.jpg" width="370" height="295" alt="наушники">
+                <img src="./images/squoosh/projectprime.jpg" width="450" alt="наушники">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -121,7 +126,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/boxes.jpg" width="370" height="295" alt="коробки">
+                <img src="./images/squoosh/boxes.jpg" width="450" alt="коробки">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -135,7 +140,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/borders.jpg" width="370" height="295" alt="монитор">
+                <img src="./images/squoosh/borders.jpg" width="450" alt="монитор">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -149,7 +154,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/limited.jpg" width="370" height="295" alt="журнал">
+                <img src="./images/squoosh/limited.jpg" width="450" alt="журнал">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -163,7 +168,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/lab.jpg" width="370" height="295" alt="этикетка">
+                <img src="./images/squoosh/lab.jpg" width="450" alt="этикетка">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -177,7 +182,7 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/business.jpg" width="370" height="295" alt="ноутбук">
+                <img src="./images/squoosh/business.jpg" width="450" alt="ноутбук">
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
