--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,16 @@
     <a  class="portfolio-list__link" href="">
     <div class="hidden-box">
     <picture>
-        <source srcset="./images/squoosh/tehnocrack_mobile.jpg 1x,
-                        ./images/squoosh/tehnocrack_mobile@2x.jpg 2x,
-                        ./images/squoosh/tehnocrack_mobile@3x.jpg 3x" media="(max-width:767px)">
-    <img src="./images/squoosh/tehnocrack.jpg" width="450" height="294" alt="технокряк">
+        <source srcset="./images/squoosh/tehnocrack_mobile.jpg 450w,
+                        ./images/squoosh/tehnocrack_mobile@2x.jpg 900w,
+                        ./images/squoosh/tehnocrack_mobile@3x.jpg 1350w" media="(max-width:767px)">
+        <source srcset="./images/squoosh/tehnocrack_tablet.jpg 354w,
+                        ./images/squoosh/tehnocrack_tablet@2x.jpg 708w,
+                        ./images/squoosh/tehnocrack_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+        <source srcset="./images/squoosh/tehnocrack.jpg 370w,
+                        ./images/squoosh/tehnocrack@2x.jpg 740w,
+                        ./images/squoosh/tehnocrack@3x.jpg 1110w" media="(min-width:1200px)">
+    <img src="./images/squoosh/tehnocrack.jpg" width="450" height="294" alt="технокряк" sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
     </picture>
         <p class="hidden-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quia molestias, consequuntur, dolore accusantium
                     cumque impedit maxime iusto quidem officia nulla perspiciatis! Quos eum nihil consequatur labore! Dolor, soluta
@@ -84,7 +90,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/neworlean.jpg" width="450" alt=" баскетболисты">
+                <picture>
+                    <source srcset="./images/squoosh/neworlean_mobile.jpg 450w,
+                                        ./images/squoosh/neworlean_mobile@2x.jpg 900w,
+                                        ./images/squoosh/neworlean_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/neworlean_tablet.jpg 354w,
+                                        ./images/squoosh/neworlean_tablet@2x.jpg 708w,
+                                        ./images/squoosh/neworlean_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/neworlean.jpg 370w,
+                                        ./images/squoosh/neworlean@2x.jpg 740w,
+                                        ./images/squoosh/neworlean@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/neworlean.jpg" width="450" height="294" alt="Баскетболисты"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -98,7 +116,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/seafood.jpg" width="450" alt="морепродукты">
+                <picture>
+                    <source srcset="./images/squoosh/seafood_mobile.jpg 450w,
+                                    ./images/squoosh/seafood_mobile@2x.jpg 900w,
+                                    ./images/squoosh/seafood_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/seafood_tablet.jpg 354w,
+                                    ./images/squoosh/seafood_tablet@2x.jpg 708w,
+                                    ./images/squoosh/seafood_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/seafood.jpg 370w,
+                                    ./images/squoosh/seafood@2x.jpg 740w,
+                                    ./images/squoosh/seafood@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/seafood.jpg" width="450" height="294" alt="морепродукты"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -112,7 +142,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/projectprime.jpg" width="450" alt="наушники">
+                <picture>
+                    <source srcset="./images/squoosh/projectprime_mobile.jpg 450w,
+                                    ./images/squoosh/projectprime_mobile@2x.jpg 900w,
+                                    ./images/squoosh/projectprime_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/projectprime_tablet.jpg 354w,
+                                    ./images/squoosh/projectprime_tablet@2x.jpg 708w,
+                                    ./images/squoosh/projectprime_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/projectprime.jpg 370w,
+                                    ./images/squoosh/projectprime@2x.jpg 740w,
+                                    ./images/squoosh/projectprime@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/projectprime.jpg" width="450" height="294" alt="наушники"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -126,7 +168,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/boxes.jpg" width="450" alt="коробки">
+                <picture>
+                    <source srcset="./images/squoosh/boxes_mobile.jpg 450w,
+                                    ./images/squoosh/boxes_mobile@2x.jpg 900w,
+                                    ./images/squoosh/boxes_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/boxes_tablet.jpg 354w,
+                                    ./images/squoosh/boxes_tablet@2x.jpg 708w,
+                                    ./images/squoosh/boxes_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/boxes.jpg 370w,
+                                    ./images/squoosh/boxes@2x.jpg 740w,
+                                    ./images/squoosh/boxes@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/boxes.jpg" width="450" height="294" alt="коробки"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -140,7 +194,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/borders.jpg" width="450" alt="монитор">
+                <picture>
+                    <source srcset="./images/squoosh/borders_mobile.jpg 450w,
+                                    ./images/squoosh/borders_mobile@2x.jpg 900w,
+                                    ./images/squoosh/borders_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/borders_tablet.jpg 354w,
+                                    ./images/squoosh/borders_tablet@2x.jpg 708w,
+                                    ./images/squoosh/borders_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/borders.jpg 370w,
+                                    ./images/squoosh/borders@2x.jpg 740w,
+                                    ./images/squoosh/borders@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/borders.jpg" width="450" height="294" alt="монитор"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -154,7 +220,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/limited.jpg" width="450" alt="журнал">
+                    <picture>
+                        <source srcset="./images/squoosh/limited_mobile.jpg 450w,
+                                        ./images/squoosh/limited_mobile@2x.jpg 900w,
+                                        ./images/squoosh/limited_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                        <source srcset="./images/squoosh/limited_tablet.jpg 354w,
+                                        ./images/squoosh/limited_tablet@2x.jpg 708w,
+                                        ./images/squoosh/limited_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                        <source srcset="./images/squoosh/limited.jpg 370w,
+                                        ./images/squoosh/limited@2x.jpg 740w,
+                                        ./images/squoosh/limited@3x.jpg 1110w" media="(min-width:1200px)">
+                        <img src="./images/squoosh/limited.jpg" width="450" height="294" alt="журнал"
+                            sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                    </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -168,7 +246,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/lab.jpg" width="450" alt="этикетка">
+                    <picture>
+                        <source srcset="./images/squoosh/lab_mobile.jpg 450w,
+                                        ./images/squoosh/lab_mobile@2x.jpg 900w,
+                                        ./images/squoosh/lab_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                        <source srcset="./images/squoosh/lab_tablet.jpg 354w,
+                                        ./images/squoosh/lab_tablet@2x.jpg 708w,
+                                        ./images/squoosh/lab_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                        <source srcset="./images/squoosh/lab.jpg 370w,
+                                        ./images/squoosh/lab@2x.jpg 740w,
+                                        ./images/squoosh/lab@3x.jpg 1110w" media="(min-width:1200px)">
+                        <img src="./images/squoosh/lab.jpg" width="450" height="294" alt="этикетка"
+                            sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                    </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
@@ -182,7 +272,19 @@
         <li class="portfolio-list__item">
         <a class="portfolio-list__link"  href="">
                 <div class="hidden-box">
-                <img src="./images/squoosh/business.jpg" width="450" alt="ноутбук">
+                <picture>
+                    <source srcset="./images/squoosh/business_mobile.jpg 450w,
+                                    ./images/squoosh/business_mobile@2x.jpg 900w,
+                                    ./images/squoosh/business_mobile@3x.jpg 1350w" media="(max-width:767px)">
+                    <source srcset="./images/squoosh/business_tablet.jpg 354w,
+                                    ./images/squoosh/business_tablet@2x.jpg 708w,
+                                    ./images/squoosh/business_tablet@3x.jpg 1062w" media="(max-width:1199px)">
+                    <source srcset="./images/squoosh/business.jpg 370w,
+                                    ./images/squoosh/business@2x.jpg 740w,
+                                    ./images/squoosh/business@3x.jpg 1110w" media="(min-width:1200px)">
+                    <img src="./images/squoosh/business.jpg" width="450" height="294" alt="ноутбук"
+                        sizes="(min-width:480px)30vw, (min-width:768px) 50vw, 100vw">
+                </picture>
                 <p class="hidden-box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint, cupiditate at maxime
                         doloremque ipsum sed incidunt! Iusto, ipsa atque molestias beatae sapiente culpa debitis blanditiis aliquid.
                         Voluptates, corrupti beatae.</p>
