--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!--========================section business==========================-->
 
     <section>
-      <div class="container business">
+      <div class="container business" data-business>
       <ul class="business__list">
         <li class="business__item">
             <div class="business__box">
