fixed bugs in js

--- a/portfolio.html
+++ b/portfolio.html
@@ -429,7 +429,7 @@
         </form>
     </div>
 </footer>
-<script src="../JS/burger.js"></script>
+<script src="../JS/burger-port.js"></script>
     </body>
     
     </html>
